--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
     </main>
 
     
-    <script src="/javascript/script.js"></script>
-    <script src="/javascript/sub_menu.js"></script>
-    <script src="/javascript/visuals.js"></script>
+    <script src="javascript/script.js"></script>
+    <script src="javascript/sub_menu.js"></script>
+    <script src="javascript/visuals.js"></script>
 </body>
 </html>
